#[build]
#target = ["x86_64-unknown-linux-gnu"]
#rustflags = ["-C", "link-arg=-nostartfiles"]

[package]
name = "day1-quotes-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23", features = ["blocking"] }
scraper = "0.18.1"
